test/fail/integration/_fail_sem_expr_index_1.hs
x :: Int
x = 3 !! 3
main = print "hello"